More accurate logging output, stable target w/o assertions

--- a/Tools/qbfpvf_proto/Makefile
+++ b/Tools/qbfpvf_proto/Makefile
@@ -5,7 +5,7 @@ profile:clean
 	$(CC) $(CFLAGS) -g -lprofiler -O3 -o qbfpvf_proto main.cpp
 
 stable:clean
-	$(CC) $(CFLAGS) -O3 -o qbfpvf_proto main.cpp
+	$(CC) $(CFLAGS) -D NDEBUG -O3 -o qbfpvf_proto main.cpp
 debug:clean
 	$(CC) $(CFLAGS) -g -o qbfpvf_proto main.cpp
 clean:
