some small optimizations

--- a/Tools/qbfpvf_proto/Makefile
+++ b/Tools/qbfpvf_proto/Makefile
@@ -3,6 +3,8 @@ CFLAGS=-Wall -std=c++2a -ldl -lboost_iostreams
 
 profile:clean
 	$(CC) $(CFLAGS) -g -lprofiler -O3 -o qbfpvf_proto main.cpp
+profile_na:clean
+	$(CC) $(CFLAGS) -D NDEBUG -g -lprofiler -O3 -o qbfpvf_proto main.cpp
 
 stable:clean
 	$(CC) $(CFLAGS) -D NDEBUG -O3 -o qbfpvf_proto main.cpp
