--- a/Tools/qbfpvf_proto/Makefile
+++ b/Tools/qbfpvf_proto/Makefile
@@ -1,14 +1,21 @@
 CC=clang++
 CFLAGS=-Wall -Wextra -std=c++2a -ldl -lboost_iostreams
 
-profile:clean
-	$(CC) $(CFLAGS) -g -lprofiler -O3 -o qbfpvf_proto main.cpp
-profile_na:clean
-	$(CC) $(CFLAGS) -D NDEBUG -g -lprofiler -O3 -o qbfpvf_proto main.cpp
+profile:
+	$(CC) $(CFLAGS) -g -lprofiler -O3 -o qbfpvf2 main2.cpp
 
-stable:clean
-	$(CC) $(CFLAGS) -D NDEBUG -O3 -o qbfpvf_proto main.cpp
-debug:clean
-	$(CC) $(CFLAGS) -g -o qbfpvf_proto main.cpp
-clean:
-	rm -vfr *~ qbfpvf_proto
+stable:
+	$(CC) $(CFLAGS) -D NDEBUG -O3 -o qbfpvf2 main2.cpp
+
+
+profile1:
+	$(CC) $(CFLAGS) -g -lprofiler -O3 -o qbfpvf1 main.cpp
+profile_na1:
+	$(CC) $(CFLAGS) -D NDEBUG -g -lprofiler -O3 -o qbfpvf1 main.cpp
+
+stable1:
+	$(CC) $(CFLAGS) -D NDEBUG -O3 -o qbfpvf1 main.cpp
+debug1:
+	$(CC) $(CFLAGS) -g -o qbfpvf1 main.cpp
+#clean:
+	#rm -vfr *~ qbfpvf_proto
